# mglib

./: CMakeLists.txt  Doxyfile  tests.cc
build-clang/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mglib_tests
build-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mglib_tests
docs/: annotated.html  classmg_1_1fs_1_1input__file.js  classmg_1_1fs_1_1output__file.js  classmg_1_1math_1_1detail_1_1Mat.html  dir_c272d7b34c079936fcd4f31f2404c5d5.js  files.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  mgconst_8h.html  mgconst_8hh.html  mgconst_8hh_source.html  mgfmt_8h.html  mgfs_8h_source.html  mgmath_8h.html  mgmath_8h.js  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespacemg.html  namespacemg_1_1fmt.html  namespacemg_1_1fmt.js  namespacemg_1_1fmt_1_1detail.html  namespacemg_1_1fmt_1_1detail.js  namespacemg_1_1fs.html  namespacemg_1_1fs.js  namespacemg_1_1fs_1_1detail.html  namespacemg_1_1math_1_1detail.html  namespacemg_1_1math_1_1detail.js  namespaces.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  structmg_1_1fmt_1_1detail_1_1is__streamable.html  structmg_1_1fmt_1_1detail_1_1is__streamable_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1decl842578ba0aa3848b411caabbfcf48cdc.html  structmg_1_1math_1_1LUResult.html  structmg_1_1math_1_1LUResult.js  structmg_1_1math_1_1Mat.html  (+14 more)
docs/html/: annotated_dup.js  classes.html  classmg_1_1fs_1_1input__file-members.html  (+41 more)
mglib/: mgconst.h  mgfmt.h  mgfs.h  mglib.h  mgmath.h
(+69 files in other folders)
